--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "doctrine/migrations": "~1.0|1.0.x-dev#67f0268"
+        "doctrine/migrations": "~1.0|1.0.x-dev#67f0268",
+        "monolog/monolog": "~1.0"
     },
     "autoload": {
         "psr-4": { "OctoLab\\Common\\": "src/" }
