--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,20 @@
 {
-    "name": "kamilsk/common",
-    "type": "library",
-    "description": "Common codebase.",
-    "homepage": "https://github.com/kamilsk/common",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Kamil Samigullin",
-            "email": "kamil@samigullin.info"
-        }
-    ],
-    "require": {
-        "php": ">=5.5"
-    },
-    "require-dev": {
-        "doctrine/migrations": "~1.0|1.0.x-dev#67f0268",
-        "monolog/monolog": "~1.0"
-    },
-    "autoload": {
-        "psr-4": { "OctoLab\\Common\\": "src/" }
-    }
+  "name": "kamilsk/common",
+  "type": "library",
+  "description": "Common codebase.",
+  "homepage": "https://github.com/kamilsk/Common",
+  "license": "MIT",
+  "authors": [
+    { "name": "Kamil Samigullin", "email": "kamil@samigullin.info" }
+  ],
+  "require": {
+    "php": ">=5.5"
+  },
+  "require-dev": {
+    "doctrine/migrations": "~1.0",
+    "monolog/monolog": "~1.0"
+  },
+  "autoload": {
+    "psr-4": { "OctoLab\\Common\\": "src/" }
+  }
 }
