--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,9 +1,6 @@
 build:
   environment:
-    php:
-      - 5.5.25
-      - 5.6.9
-      - hhvm
+    php: 5.5.25
   tests:
     override:
       - command: phpunit --coverage-clover=code-coverage
