--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
-/docs/              export-ignore
 /src/Tests/         export-ignore
 .gitattributes      export-ignore
 .gitignore          export-ignore
+.scrutinizer.yml    export-ignore
 .travis.yml         export-ignore
 autoload.php.dist   export-ignore
 CHANGELOG.md        export-ignore
