--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /src/Tests/         export-ignore
+.codeclimate.yml    export-ignore
 .gitattributes      export-ignore
 .gitignore          export-ignore
 .scrutinizer.yml    export-ignore
