--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+/docs/              export-ignore
 /src/Tests/         export-ignore
 .codeclimate.yml    export-ignore
 .gitattributes      export-ignore
