--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-/docs/              export-ignore
-/src/Tests/         export-ignore
+/tests/             export-ignore
 .codeclimate.yml    export-ignore
 .gitattributes      export-ignore
 .gitignore          export-ignore
