--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,14 @@ php:
   - 5.5
   - 5.6
   - 7.0
-#  - hhvm
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 install:
-  - composer --dev install
+  - composer install
 
-script:
-  - phpunit
+notifications:
+  slack: octolab:1eMS7IqOArBipiu31jYVd0cN
