--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
+/info/              export-ignore
 /tests/             export-ignore
 /.codeclimate.yml   export-ignore
 /.editorconfig      export-ignore
@@ -6,9 +7,5 @@
 /.gitignore         export-ignore
 /.scrutinizer.yml   export-ignore
 /.travis.yml        export-ignore
-/autoload.php.dist  export-ignore
-/CHANGELOG.md       export-ignore
-/CONDUCT.md         export-ignore
-/CONTRIBUTING.md    export-ignore
 /phpunit.xml.dist   export-ignore
 /README.md          export-ignore
