--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,6 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
-/info/              export-ignore
-/tests/             export-ignore
+/info               export-ignore
+/tests              export-ignore
 /.codeclimate.yml   export-ignore
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
