--- a/tests/app/config/config.yml
+++ b/tests/app/config/config.yml
@@ -1,6 +1,6 @@
 imports:
   - { resource: parameters.yml }
-  - { resource: component/config.yml }
+  - component/config.yml
 
 component:
   parameter: "base component's parameter will be overwritten by root config"
