--- a/tests/app/config/config.yml
+++ b/tests/app/config/config.yml
@@ -6,3 +6,6 @@ component:
   parameter: "base component's parameter will be overwritten by root config"
   placeholder_parameter: %placeholder%
   constant: const(E_ALL)
+  constant_map:
+    const(E_ALL): 30719
+    const(E_USER_ERROR): 256
