--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -47,7 +47,7 @@ checks:
       type_name: '^[A-Z][a-zA-Z0-9]*$'
       exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
       isser_method_name: '^(?:is|has|should|may|supports)'
-    newline_at_end_of_file: true
+    newline_at_end_of_file: false
     no_goto: true
     no_long_variable_names:
       maximum: '20'
