--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -47,11 +47,11 @@ checks:
       type_name: '^[A-Z][a-zA-Z0-9]*$'
       exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
       isser_method_name: '^(?:is|has|should|may|supports)'
-    newline_at_end_of_file: false
+    newline_at_end_of_file: true
     no_goto: true
     no_long_variable_names:
       maximum: '20'
-    no_new_line_at_end_of_file: true
+    no_new_line_at_end_of_file: false
     no_short_method_names:
       minimum: '3'
     no_short_variable_names:
