issue #19, remove redundant Test namespace

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "psr-4": { "OctoLab\\Common\\": "src/" }
   },
   "autoload-dev": {
-    "psr-4": { "Test\\OctoLab\\Common\\": "tests/" }
+    "psr-4": { "OctoLab\\Common\\": "tests/" }
   },
   "extra": {
     "branch-alias": {
