--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -33,29 +33,29 @@ checks:
       order_alphabetically: true
     function_in_camel_caps: true
     line_length:
-      max_length: '120'
+      max_length: 120
     more_specific_types_in_doc_comments: true
     naming_conventions:
       local_variable: '^[a-z][a-zA-Z0-9]*$'
-#      abstract_class_name: ^Abstract|Factory$
-#      utility_class_name: 'Utils?$'
+      abstract_class_name: '^[A-Z][a-zA-Z0-9]*$'
+      utility_class_name: '^[A-Z][a-zA-Z0-9]*$'
       constant_name: '^[A-Z][A-Z0-9]*(?:_[A-Z0-9]+)*$'
       property_name: '^[a-z][a-zA-Z0-9]*$'
       method_name: '^(?:[a-z]|__)[a-zA-Z0-9]*$'
       parameter_name: '^[a-z][a-zA-Z0-9]*$'
-#      interface_name: '^[A-Z][a-zA-Z0-9]*Interface$'
+      interface_name: '^[A-Z][a-zA-Z0-9]*$'
       type_name: '^[A-Z][a-zA-Z0-9]*$'
       exception_name: '^[A-Z][a-zA-Z0-9]*Exception$'
       isser_method_name: '^(?:is|has|should|may|supports)'
     newline_at_end_of_file: true
     no_goto: true
     no_long_variable_names:
-      maximum: '20'
+      maximum: 20
     no_new_line_at_end_of_file: false
     no_short_method_names:
-      minimum: '3'
+      minimum: 2
     no_short_variable_names:
-      minimum: '3'
+      minimum: 2
     optional_parameters_at_the_end: true
     param_doc_comment_if_not_inferrable: true
     parameter_doc_comments: true
