--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -50,7 +50,7 @@ checks:
     newline_at_end_of_file: true
     no_goto: true
     no_long_variable_names:
-      maximum: 20
+      maximum: 20FileLoader
     no_new_line_at_end_of_file: false
     no_short_method_names:
       minimum: 2
