--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
-/info               export-ignore
+/.github            export-ignore
 /tests              export-ignore
 /.codeclimate.yml   export-ignore
 /.editorconfig      export-ignore
@@ -7,5 +7,6 @@
 /.gitignore         export-ignore
 /.scrutinizer.yml   export-ignore
 /.travis.yml        export-ignore
+/CHANGELOG.md       export-ignore
 /phpunit.xml.dist   export-ignore
 /README.md          export-ignore
