--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,15 @@
     "doctrine/migrations": "~1.0",
     "monolog/monolog": "~1.0",
     "secondparty/dipper": "*",
-    "symfony/config": "^2.0",
-    "symfony/yaml": "^2.0"
+    "symfony/config": "~2.0|~3.0",
+    "symfony/yaml": "~2.0|~3.0"
   },
   "suggest": {
     "doctrine/migrations": "for use OctoLab\\Common\\Doctrine\\Migration (~1.0 is recommended)",
     "incenteev/composer-parameter-handler": "to handle parameters.yml (~2.0 is recommended)",
     "monolog/monolog": "for use OctoLab\\Common\\Monolog (~1.0 is recommended)",
-    "secondparty/dipper": "as alternative of Symfony Yaml parser (stable version is recommended)",
-    "symfony/config": "for use OctoLab\\Common\\Config (^2.0 is recommended)",
-    "symfony/yaml": "for use OctoLab\\Common\\Config (^2.0 is recommended)"
+    "symfony/config": "for use OctoLab\\Common\\Config (~3.0 is recommended)",
+    "symfony/yaml": "for use OctoLab\\Common\\Config (~3.0 is recommended)"
   },
   "autoload": {
     "psr-4": { "OctoLab\\Common\\": "src/" }
