--- a/tests/app/config/config.yml
+++ b/tests/app/config/config.yml
@@ -2,7 +2,9 @@ imports:
   - { resource: parameters.yml }
   - component/config.yml
 
-component:
-  parameter: "base component's parameter will be overwritten by root config"
+app:
   placeholder_parameter: %placeholder%
   constant: const(E_ALL)
+
+component:
+  parameter: "base component's parameter will be overwritten by root config"
