--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   },
   "suggest": {
     "doctrine/migrations": "for use OctoLab\\Common\\Doctrine\\Migration (~1.0 is recommended)",
-    "incenteev/composer-parameter-handler": "to handle parameters.yml (~2.0 is recommended)",
+    "incenteev/composer-parameter-handler": "optional for handle parameters.yml (~2.0 is recommended)",
     "monolog/monolog": "for use OctoLab\\Common\\Monolog (~1.0 is recommended)",
     "symfony/config": "for use OctoLab\\Common\\Config (~3.0 is recommended)",
     "symfony/yaml": "for use OctoLab\\Common\\Config (~3.0 is recommended)"
