--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "2.x-dev"
+      "dev-master": "2.x-dev",
+      "dev-3.x": "3.x-dev"
     }
   },
   "support": {
