--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,15 @@
     { "name": "Kamil Samigullin", "email": "kamil@samigullin.info", "role": "lead" }
   ],
   "require": {
-    "php": ">=5.5"
+    "php": ">=7.0"
   },
   "require-dev": {
     "composer/composer": "~1.0",
     "doctrine/migrations": "~1.0",
     "jolicode/jolinotif": "~1.0",
     "monolog/monolog": "~1.0",
-    "symfony/config": "~2.0|~3.0",
-    "symfony/yaml": "~2.0|~3.0"
+    "symfony/config": "~3.0",
+    "symfony/yaml": "~3.0"
   },
   "suggest": {
     "doctrine/migrations": "for use OctoLab\\Common\\Doctrine\\Migration (~1.0 is recommended)",
