--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
   },
   "suggest": {
     "doctrine/migrations": "for using OctoLab\\Common\\Doctrine\\Migration (~1.0 is recommended)",
-    "jolicode/jolinotif": "optional for showing desktop notification (~1.0 is recommended)",
+    "jolicode/jolinotif": "optional for showing desktop notification (^1.0.5 is recommended)",
     "monolog/monolog": "for using OctoLab\\Common\\Monolog (~1.0 is recommended)",
     "symfony/config": "for using OctoLab\\Common\\Config (~3.0 is recommended)",
     "symfony/filesystem": "for using OctoLab\\Common\\Composer\\Script\\AdminLte (~3.0 is recommended)",
