--- a/composer.yml
+++ b/composer.yml
@@ -1,15 +1,26 @@
-# Experiment for issue https://github.com/composer/composer/issues/5364:
+# Installation:
 # - install PyYAML
-#   pip install pyyaml
+#   $ pip install pyyaml
 #   or
-#   sudo apt-get install python-yaml
+#   $ sudo apt-get install python-yaml
 #   or
-#   sudo yum install python-yaml
+#   $ sudo yum install python-yaml
+# Optional:
 # - add alias to .bash_profile
 #   alias yaml2json='python -c "import sys,yaml,json;sys.tracebacklimit=0;print(json.dumps(yaml.load(open(sys.argv[1]).read()), indent=2))"'
-# - refresh current context
-#   source .bash_profile
-# - run `yaml2json composer.yml > composer.json`
+# Usages:
+# - with PhpStorm: PhpStorm \ Preferences \ Tools \ File watchers \ Add
+#   Name: composer converter
+#   Description: Convert composer.yml to composer.json
+#   File type: YAML
+#   Scope: Project Files
+#   Program: `which python`
+#   Arguments: -c "import sys,yaml,json;sys.tracebacklimit=0;print(json.dumps(yaml.load(open(sys.argv[1]).read()), indent=2))" composer.yml
+#   Working directory: $ProjectFileDir$
+#   Output paths to refresh: composer.json
+#   Create output file from stdout: true
+# - with console: `yaml2json composer.yml > composer.json`
+
 name: "kamilsk/common"
 type: "library"
 description: "Common codebase."
@@ -17,9 +28,9 @@ homepage: "https://github.com/kamilsk/Common"
 license: "MIT"
 
 authors:
-  - name: "Kamil Samigullin"
-    email: "kamil@samigullin.info"
-    role: "lead"
+- name: "Kamil Samigullin"
+  email: "kamil@samigullin.info"
+  role: "lead"
 
 require:
   php: ">=7.0"
@@ -48,7 +59,7 @@ suggest:
 
 autoload:
   files:
-    - "src/functions.php"
+  - "src/functions.php"
   psr-4:
     OctoLab\Common\: "src/"
 
