optimize test data

--- a/tests/app/config/component/config.yml
+++ b/tests/app/config/component/config.yml
@@ -2,4 +2,4 @@ imports:
   - { resource: base.yml }
 
 component:
-  parameter: "base component's parameter will be overwritten by component config"
+  parameter: base component's parameter will be overwritten by component config
