--- a/tests/app/config/config.ini
+++ b/tests/app/config/config.ini
@@ -1,9 +1,9 @@
 [imports]
-parameters = "parameters.ini"
-component = "component/config.ini"
+parameters = parameters.ini
+component = component/config.ini
 
 [app]
-placeholder_parameter = "%placeholder%"
+placeholder_parameter = %placeholder%
 ; ini supports E_ALL without const-magic
 constant = "const(E_ALL)"
 
