--- a/tests/app/config/component/base.yml
+++ b/tests/app/config/component/base.yml
@@ -1,3 +1,3 @@
 component:
-  parameter: "base parameter will be overwritten"
-  base_parameter: "base parameter will not be overwritten"
+  parameter: base parameter will be overwritten
+  base_parameter: base parameter will not be overwritten
