--- a/tests/app/config/component/config.ini
+++ b/tests/app/config/component/config.ini
@@ -1,5 +1,5 @@
 [imports]
-base = "base.ini"
+base = base.ini
 
 [component]
 parameter = "base component's parameter will be overwritten by component config"
