--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
   "extra": {
     "branch-alias": {
       "dev-3.x": "3.x-dev", 
-      "dev-master": "2.x-dev"
+      "dev-master": "2.x-dev", 
+      "dev-4.x": "4.x-dev"
     }
   }, 
   "suggest": {
