remove package.meta from dist

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,5 +10,6 @@
 /CHANGELOG.md       export-ignore
 /CONDUCT.md         export-ignore
 /CONTRIBUTING.md    export-ignore
+/package.meta       export-ignore
 /phpunit.xml.dist   export-ignore
 /README.md          export-ignore
